--- a/docs/styles/custom.css
+++ b/docs/styles/custom.css
@@ -10,13 +10,17 @@
     --theme-error: #ff7676;
 }
 
+html {
+    overflow: hidden;
+}
+
 #main {
     height: 100%;
     display: flex;
     flex-direction: row;
     background: var(--theme-primary-background);
     padding-top: 120px;
-    overflow-x: hidden;
+    overflow: hidden;
     width: 100%;
 }
 
@@ -81,6 +85,7 @@
 .sidebar a {
     color: var(--theme-secondary-color);
     overflow-wrap: break-word;
+    font-size: 16px;
 }
 
 .sidebar a:hover, .sidebar a.active {
