--- a/docs/styles/custom.css
+++ b/docs/styles/custom.css
@@ -15,13 +15,18 @@ html {
 }
 
 #main {
-    height: 100%;
+    height: calc(100% - 35px);
     display: flex;
     flex-direction: row;
     background: var(--theme-primary-background);
-    padding-top: 120px;
-    overflow: hidden;
+    /* padding-top: 120px; */
+    /* overflow: hidden; */
     width: 100%;
+    max-width: calc(100% - 300px);
+}
+
+#main .section {
+    width: calc(100% - 300px);
 }
 
 #main>.core>.content {
@@ -377,6 +382,13 @@ ul, ol, li {list-style:none; padding-left:0; margin-left:0;}
 }
 .main section article {
     padding: 10px;
+    height: calc(100% - 90px);
+}
+.main section article iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+    border-radius: 15px;
 }
 .main section article .container-overview {
     padding: 12px 12px 0 12px;
@@ -976,4 +988,32 @@ dd.yes-def ul {
 
 .tag-source span a:hover {
 	color: var(--theme-primary-color);
+}
+
+.str {
+    color: var(--theme-primary-text);
+}
+
+.pun {
+    color: var(--theme-error);
+}
+
+.pln {
+    color: var(--theme-secondary-text);
+}
+
+.lit {
+    color: var(--theme-primary-color);
+}
+
+.atv {
+    color: var(--theme-secondary-color);
+}
+
+.atn {
+    color: var(--theme-primary-text);
+}
+
+.tag {
+    color: var(--theme-primary-background);
 }
