Update CSS to ensure geoflo_sub module is displayed; modify webpack.js to enhance index.html handling

--- a/docs/styles/custom.css
+++ b/docs/styles/custom.css
@@ -44,6 +44,10 @@ html {
     background-color: var(--geoflo-secondary-background);
 }
 
+#module:geoflo_sub {
+    display: block !important;
+}
+
 .top-nav {
     background: var(--theme-secondary-background);
     padding: 8px 24px;
