Add margin-top to paragraph elements within title class in custom.css

--- a/docs/styles/custom.css
+++ b/docs/styles/custom.css
@@ -150,6 +150,10 @@ body {
     background-color: var(--theme-primary-background);
 }
 
+.title p {
+    margin-top: 20px;
+}
+
 /* .tag:not(body) {
     background-color: var(--theme-primary-color);
 } */
